# macro_rules_rec

./: Cargo.toml  README.md
src/: attribute.rs  lib.rs
tests/: test.rs
